--- a/Clase1/index.html
+++ b/Clase1/index.html
@@ -19,16 +19,30 @@
 		<h3 class="text-success">Datos</h3>
 		<div id="datos"></div>
 		<hr />
-		<h3>Dias de la semana</h3>
+		<h3>Dias de la semana (Condicionales)</h3>
 		<button id="btnSemana" class="btn btn-dark">Ejecutar Codigo</button>
 		<div id="mensajes"></div>
 		<hr />
-		<h1>Integrando JS al HTML</h1>
+		<h2>Integrando JS al HTML</h2>
 		<input type="text" id="inputText" />
 		<button onclick="toPrint(5)" class="btn btn-success">Imprimir</button>
 		<div id="toPrint">
 			<p></p>
 		</div>
+
+		<h2 class="mt-5">Funciones</h2>
+		<h5>Calculadora basica</h5>
+		<label for="numero1">Numero 1</label>
+		<input type="number" id="numero1" required placeholder="Numero 1" />
+		<br />
+		<label for="numero2">Numero 2</label>
+		<input type="number" id="numero2" required placeholder="Numero 2" />
+		<br />
+		<button class="btn btn-info" id="sumar">Sumar</button>
+		<button class="btn btn-info" id="restar">Restar</button>
+		<button class="btn btn-info" id="multiplicar">Multiplicar</button>
+		<button class="btn btn-info" id="dividir">Dividir</button>
+		<div class="text-danger pt-3 pb-3" id="resultadoOperacion"></div>
 
 		<script
 			src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -41,7 +55,9 @@
 			crossorigin="anonymous"
 		></script>
 		<script src="js/index.js"></script>
-		<script src="js/ejercicio1.js"></script>
-		<script src="js/ejercicio2.js"></script>
+		<script src="js/1_condicionales.js"></script>
+		<script src="js/2_funciones.js"></script>
+		<script src="js/3_funciones.js"></script>
+		<script src="js/4_actividad1.js"></script>
 	</body>
 </html>
