--- a/Clase2/index.html
+++ b/Clase2/index.html
@@ -32,7 +32,7 @@
 		<hr /> -->
 		<div class="px-5">
 			<div class="row">
-				<div class="col">
+				<div class="col-12 col-md-6">
 					<div class="mt-2 px-4 py-3 shadow rounded bg-light altura">
 						<h3 id="nombreUsuario">Funciones</h3>
 						<div class="form-group">
@@ -62,7 +62,7 @@
 					</div>
 				</div>
 
-				<div class="col">
+				<div class="col-12 col-md-6">
 					<div class="mt-2 px-4 py-3 shadow rounded bg-light altura">
 						<h3>Calculadora</h3>
 						<div class="form-group">
