[add] Tablas Mulplicar, Numeros primos, figuras

--- a/Clase2/index.html
+++ b/Clase2/index.html
@@ -30,7 +30,7 @@
 		</button>
 
 		<hr /> -->
-		<div class="container-fluid px-5">
+		<div class="container">
 			<div class="row">
 				<div class="col-12 col-md-6 col-lg-4">
 					<div class="mt-2 px-4 py-3 shadow rounded bg-light altura">
@@ -113,7 +113,6 @@
 								class="form-control"
 								id="numeroParImpar"
 								placeholder="Ingrese un numero"
-								onkeydown="comprbar()"
 							/>
 
 							<button
