--- a/Login/api.html
+++ b/Login/api.html
@@ -84,6 +84,11 @@
 				<button class="btn btn-warning mx-1" onclick="todos()">
 					Todos
 				</button>
+
+				<button class="btn btn-info mx-1" onclick="especifico()">
+					especifico
+				</button>
+
 				<button class="btn btn-danger mx-1" onclick="limpiar()">
 					Limpiar
 				</button>
