--- a/Login/index.html
+++ b/Login/index.html
@@ -60,10 +60,14 @@
 		<main class="container">
 			<div id="errores" class="fixed-bottom"></div>
 			<div class="login">
-				<div class="text-center imagen">
-					<img
+				<div class="text-center imagen mb-5">
+					<!-- <img
 						src="https://getbootstrap.com/docs/4.6/assets/brand/bootstrap-solid.svg"
 						alt="bootstrap"
+					/> -->
+					<img
+						src="http://pngimg.com/uploads/rick_morty/rick_morty_PNG11.png"
+						alt="rick_morty" width="320px"
 					/>
 				</div>
 				<div>
